tests/machine/x/zig/save_jsonl_stdout.error
Error on line 36: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/save_jsonl_stdout.zig:36:15: error: expected type 'i32', found '*const [4:0]u8'
/usr/local/zig-0.12.1/lib/std/hash_map.zig:551:38: note: parameter type declared here
/usr/local/zig-0.12.1/lib/std/hash_map.zig:14:13: error: std.auto_hash.autoHash does not allow slices here ([]const u8) because the intent is unclear. Consider using std.StringHashMap for hashing the contents of []const u8. Alternatively, consider using std.auto_hash.hash or providing your own hash function instead.
/usr/local/zig-0.12.1/lib/std/hash_map.zig:55:39: note: called from here

35:         var m = std.AutoHashMap(i32, []const u8).init(std.heap.page_allocator);
36:         m.put("name", "Alice") catch unreachable;
37:         m.put("age", @as(i32, @intCast(30))) catch unreachable;
